# fla-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
fla-project/include/pda/: context.h  emulator.h  parser.h  tran_kv.h
fla-project/include/tm/: context.h  emulator.h  parser.h  tape.h  tran_kv.h
fla-project/include/utils/: exception.h  parse_token.h  syntax_excpt.h
fla-project/src/: main.cpp
fla-project/src/pda/: context.cpp  emulator.cpp  parser.cpp  tran_kv.cpp
fla-project/src/tm/: context.cpp  emulator.cpp  parser.cpp  tape.cpp  tran_kv.cpp
fla-project/src/utils/: parse_token.cpp
pda/: case.pda  test.pda
report/: report.md
test/: .gitignore  README.md  robustness_ans.txt  test.py  testcases.txt  testcases_ans.txt  testcases_robustness.txt
test/testcases/: cycle_shift.tm  square.tm  syntax1.tm  syntax2.tm  syntax3.tm
tm/: case1.tm  case2.tm  test.tm
